feat: rider delivers multiple orders using nearest neighbor; enforces vehicle capacity (bike, car, truck); tracks driver location in memory

--- a/Parcel_Distribution/Parcel_Distribution.vcxproj.filters
+++ b/Parcel_Distribution/Parcel_Distribution.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="graph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nearestNeighbor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
