--- a/Parcel_Distribution/Parcel_Distribution.vcxproj
+++ b/Parcel_Distribution/Parcel_Distribution.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="nearestNeighbor.cpp" />
     <ClCompile Include="graph.cpp" />
     <ClCompile Include="source.cpp" />
   </ItemGroup>
