--- a/Parcel_Distribution/Parcel_Distribution.vcxproj.filters
+++ b/Parcel_Distribution/Parcel_Distribution.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="nearestNeighbor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="formatted.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
